# Vi-HERMES

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
Compare/: config_env.py  run_ircot.py  run_raptor.py  test_hipporag.py  test_ircot.py  test_lightrag.py
Compare/Compare/: rag_metrics.py  requirements.txt  run_hipporag.py  run_lightrag.py
UraxLaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker/: docker-compose.yml
examples/: clear_old_data.py  count_graph_stats.py  evaluate_rag_on_viquad.py  ingest_viquad_full_levels.py  ingest_viquad_to_milvus.py  print.py  query_example.py  query_rag.py  run_200_last_rows.py  test_neo4j_chunker.py  test_parse_documents.py  test_parser_to_milvus.py  test_parser_to_neo4j.py  test_preprocess.py  test_three_agents.py
examples/.chainlit/: config.toml
milvus/data/rdb_data/: IDENTITY  LOG  LOG.old.1759938856395597  LOG.old.1759938908828622  LOG.old.1759938961522254  LOG.old.1759939014051116  LOG.old.1759939066794666  LOG.old.1759939119618262  LOG.old.1759939172157790  LOG.old.1759939224664445  LOG.old.1759939277386282  LOG.old.1759939329922154  LOG.old.1759939382747661  LOG.old.1759939435235876  LOG.old.1759939488186568  LOG.old.1759939541187839  LOG.old.1759939593674383  LOG.old.1759939646199713  LOG.old.1759939698940525  LOG.old.1759939752041891  LOG.old.1759939804588670  LOG.old.1759939857111026  LOG.old.1759939909715137  LOG.old.1759939962367824  LOG.old.1759940015603280  LOG.old.1759940068391953  MANIFEST-000121  MANIFEST-000126
milvus/data/rdb_data_meta_kv/: 000140.sst  000144.sst  000150.sst  000156.sst  000167.sst  IDENTITY  LOG  LOG.old.1759938856384303  LOG.old.1759938908818009  LOG.old.1759938961504315  LOG.old.1759939014036781  LOG.old.1759939066783392  LOG.old.1759939119595527  LOG.old.1759939172145114  LOG.old.1759939224649311  LOG.old.1759939277373640  MANIFEST-000157  (+16 more)
neo4j/data/: server_id
uraxlaw/: __init__.py
uraxlaw/Agents/: engine.py  prompt.py  relations.py  segmentation.py
uraxlaw/config/: settings.py
uraxlaw/lawgraph/: __init__.py  models.py  neo4j_client.py  test.py  traversal.py
uraxlaw/lawrag/: hybrid.py  milvus_client.py  models.py
uraxlaw/llm/: extract_agent.py
uraxlaw/preprocess/: __init__.py  agent_chunker.py  ingestion.py  milvus_chunker.py  models.py  neo4j_chunker.py  parser.py  pipeline.py
vihermes/: __init__.py
vihermes/Agents/: engine.py  models.py  prompt.py  relations.py  segmentation.py
vihermes/config/: __init__.py  settings.py
vihermes/lawgraph/: models.py  neo4j_client.py  traversal.py
vihermes/lawrag/: __init__.py  hybrid.py  milvus_client.py  models.py
vihermes/preprocess/: agent_chunker.py  ingestion.py  milvus_chunker.py  neo4j_chunker.py  parser.py  pipeline.py
(+63 files in other folders)
