[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UraxLaw"
version = "0.1.0"
authors = [
    {name = "Ura Team"}
]
description = "update later"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "neo4j>=6.0.2",
    "pydantic>=2.7",
    "pydantic-ai>=1.0.15",
    "pydantic-core>=2.16",
    "typing-extensions==4.12.2",
]



[tool.setuptools.packages.find]
include = ["uraxlaw*", "data", "lawgraph"]

[tool.setuptools]
include-package-data = true


