[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UraxLaw"
version = "0.1.0"
description = "UraxLaw Graph RAG System - Lightweight Version"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.0",
    "pymilvus>=2.3.0",
    "python-docx>=1.0.0",
    "pydantic-settings>=2.12.0",
    "pydantic-ai>=1.22.0",
]
# Đã xóa: torch, sentence-transformers, typing-extensions (không bắt buộc)

[tool.setuptools.packages.find]
include = ["uraxlaw*", "data", "lawgraph", "lawrag", "Agents", "config", "preprocess"]
